--- a/index.html
+++ b/index.html
@@ -418,6 +418,11 @@
 <div class="footer">
 
 </div>
+</section>
+<section id="final-assignments-.scrollable" class="slide level2">
+<h2>Final assignments .{scrollable}</h2>
+<p>You can access the detailed assignment page here:</p>
+<p><a href="test-site/test-html-2.html" target="_blank">View Assignments</a></p>
 <div class="quarto-auto-generated-content">
 <p><img src="images/uva_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
