--- a/index.html
+++ b/index.html
@@ -339,6 +339,11 @@
 </div>
 
 </section>
+<section id="section" class="slide level2">
+<h2></h2>
+<p>Slides created using <a href="https://quarto.org/" target="_blank">Quarto</a> and <a href="https://revealjs.com/" target="_blank">reveal.js</a></p>
+<p>Cover photo made in R by <a href="https://art.djnavarro.net" target="_blank">Danielle Navarro</a></p>
+</section>
 <section>
 <section id="course-overview" class="title-slide slide level1 center" data-background-color="#8000FF">
 <h1>Course overview 📋</h1>
@@ -403,30 +408,90 @@
 </tr>
 </tbody>
 </table>
-<div class="footer">
-
-</div>
 </section>
 <section id="assignments" class="slide level2">
 <h2>Assignments</h2>
-<div class="footer">
+<div>
 
 </div>
+<div class="quarto-layout-panel" data-layout-ncol="2">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<p><strong><a href="assignments/dv-assignment-1.html" target="_blank">Assignment 1</a></strong></p>
+<ul>
+<li><p>Part alone, part in a group</p></li>
+<li><p>etc etc</p></li>
+<li><p>X% of the grade</p></li>
+</ul>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 50.0%;justify-content: flex-start;">
+<p><strong><a href="assignments/dv-assignment-2.html" target="_blank">Assignment 2</a></strong></p>
+<ul>
+<li><p>Work in a group</p></li>
+<li><p>etc etc</p></li>
+<li><p>X% of the grade</p></li>
+</ul>
+</div>
+</div>
+</div>
+</section>
+<section id="assignment-1-1" class="slide level2">
+<h2>Assignment 1</h2>
+<p><a href="assignments/dv-assignment-1.html" target="_blank">View assignment 1 here</a></p>
+</section>
+<section id="assignment-2-1" class="slide level2">
+<h2>Assignment 2</h2>
+<p><a href="assignments/dv-assignment-2.html" target="_blank">View assignment 2 here</a></p>
 </section>
 <section id="deadlines" class="slide level2">
 <h2>Deadlines</h2>
-<div class="footer">
+</section>
+<section id="materials" class="slide level2 scrollable">
+<h2>Materials</h2>
+<div>
 
 </div>
-</section>
-<section id="final-assignments-.scrollable" class="slide level2">
-<h2>Final assignments .{scrollable}</h2>
-<p>You can access the detailed assignment page here:</p>
-<p><a href="test-site/test-md.md" target="_blank">View Assignments</a></p>
+<div class="quarto-layout-panel" data-layout-ncol="3">
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-left">
+<figure>
+<p><img data-src="images/book_wickham.png" height="300"></p>
+<figcaption><a href="https://r4ds.had.co.nz/data-visualisation.html">r4ds.had.co.nz</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-left">
+<figure>
+<p><img data-src="images/book_healy.jpg" height="300"></p>
+<figcaption><a href="https://socviz.co/">socviz.co</a></figcaption>
+</figure>
+</div>
+</div>
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
+<div class="quarto-figure quarto-figure-left">
+<figure>
+<p><img data-src="images/canvas.png" height="300"></p>
+<figcaption><a href="https://canvas.uva.nl/courses/47312/modules">Videos on canvas</a></figcaption>
+</figure>
+</div>
+</div>
+</div>
+<div class="quarto-layout-row">
+<div class="quarto-layout-cell" style="flex-basis: 33.3%;justify-content: flex-start;">
+<p><strong>Helpful extra resources</strong></p>
+<ul>
+<li><p><a href="https://clauswilke.com/dataviz/">Claus Wilke: Fundamentals of Data Viz</a></p></li>
+<li><p><a href="https://psyteachr.github.io/introdataviz/plotstyle.html" class="uri">https://psyteachr.github.io/introdataviz/plotstyle.html</a></p></li>
+</ul>
+</div>
+</div>
+</div>
 <div class="quarto-auto-generated-content">
 <p><img src="images/uva_logo.png" class="slide-logo"></p>
 <div class="footer footer-default">
-<p><span style="color: white;">Cover photo made in R by <a href="https://art.djnavarro.net" style="color: pink; text-decoration: underline;">Danielle Navarro</a></span></p>
+
 </div>
 </div>
 </section></section>
