--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 <div class="quarto-figure quarto-figure-left">
 <figure>
 <p><img data-src="images/book_wickham.png" height="300"></p>
-<figcaption><a href="https://r4ds.had.co.nz/data-visualisation.html">r4ds.had.co.nz</a></figcaption>
+<figcaption><a href="https://r4ds.hadley.nz/data-visualize.html">r4ds.had.co.nz</a></figcaption>
 </figure>
 </div>
 </div>
